# ovo-proteindj

./: .gitignore  LICENSES_THIRD_PARTY  README.md  pyproject.toml
ovo_proteindj/: __init__.py  descriptors_proteindj.py  logic.py  models.py  models_proteindj.py
ovo_proteindj/components/: help_components.py  workflow_visualization_components.py
ovo_proteindj/pages/: binder_denovo.py  monomer_motifscaff.py  proteindj_import.py
tests/integration_tests/: test_binder_denovo.py  test_monomer_motifscaff.py
